--- a/content/accessibility.njk
+++ b/content/accessibility.njk
@@ -1,6 +1,6 @@
 ---
 title: Accessibility
-emoji: <span class="emoji" aria-hidden="true">♿</span>
+rss: false
 ---
 {% extends 'structure/templates/page-3col.njk'%}
 
