--- a/content/collections.njk
+++ b/content/collections.njk
@@ -1,10 +1,11 @@
 ---
 title: Collections
-emoji: <span class="emoji" aria-hidden="true">🧩</span>
+rss: false
 eleventyNavigation:
   key: Collections
   emoji: <span class="emoji" aria-hidden="true">🧩</span>
   order: 4
+draft: true
 ---
 {% extends "structure/pages/list-collections.njk" %}
 
