--- a/content/experiments.njk
+++ b/content/experiments.njk
@@ -1,6 +1,6 @@
 ---
 title: Experiments
-emoji: <span class="emoji" aria-hidden="true">🧪</span>
+rss: false
 eleventyNavigation:
   key: Experiments
   emoji: <span class="emoji" aria-hidden="true">🧪</span>
