--- a/content/experiments/change-background-colour-with-range-input.njk
+++ b/content/experiments/change-background-colour-with-range-input.njk
@@ -2,6 +2,7 @@
 title: Changing background colour with range input
 description: Use the range input to change the colour of the background
 date: 2023-08-01
+rss: true
 style: '
   :root {
     --hue: 255;
