--- a/content/experiments/css-ghost.njk
+++ b/content/experiments/css-ghost.njk
@@ -2,6 +2,7 @@
 title: CSS Ghost
 description: "Pure CSS ghost created for the <a href='https://32bit.mysteryslug.com/events/halloween-2023/''>32bit.cafe Halloween 2023 challenge</a>."
 date: 2023-10-25
+rss: true
 style: '
     * {
         cursor: url("https://cdn.custom-cursor.com/db/10498/32/cute-ghost-cursor.png") , auto !important
