--- a/content/experiments/html-named-colors.njk
+++ b/content/experiments/html-named-colors.njk
@@ -2,8 +2,9 @@
 title: HTML named colors
 description: Filterable HTML named colours with colour contrast values and copy functionality
 date: 2023-11-03
+rss: true
 tags:
-- dev
+  - dev
 style: '
   .namedcolours__header {
     padding-bottom: 3rem;
