--- a/content/index.njk
+++ b/content/index.njk
@@ -1,5 +1,6 @@
 ---
 title: Home
+rss: false
 scripts: '
 	{# Current time #}
 	<script type="text/javascript">
@@ -30,7 +31,7 @@ scripts: '
 		<li class="noscriptHide"><span class="emoji" role="img" aria-label="Local time">⏰</span> <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (gmt)</li>
 		<li><span class="emoji" role="img" aria-label="Sun sign">🌞</span> Gemini</li>
 		<li><span role="img" class="emoji" aria-label="Moon sign">🌚</span> Scorpio</li>
-		<li><span role="img" class="emoji" aria-label="Status">🟢</span> Probably Online</li>
+		<li><img src="/images/myspace-online.gif" alt="Online now" class="onlinenow"> Online now!</li>
 	</ul>
 </div>
 {%- endblock -%}
