--- a/content/links.njk
+++ b/content/links.njk
@@ -1,7 +1,6 @@
 ---
 title: Links
-emoji: ' <span class="emoji" role="img" role="presentation">🔗</span>'
-description: 
+rss: false
 eleventyNavigation:
   key: Links
   emoji: <span class="emoji" aria-hidden="true">🔗</span>
@@ -290,6 +289,9 @@ eleventyNavigation:
     </li>
     <li class="buttonwall__item">
       <a href="https://picdefacer.com/" style="font-size: 12px; background-color: #5577ff; color: #fff;">image anonymizer</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://jakearchibald.github.io/svgomg/" style="font-size: 12px; background-color: #00bcd4; color: #000;">SVG optimiser</a>
     </li>
     <li class="buttonwall__item">
       <a href="https://tinypng.com/" style="font-size: 12px; background-color: #080706; color: #f7f3f0;">TinyPNG</a>
