--- a/content/manifesto.njk
+++ b/content/manifesto.njk
@@ -1,6 +1,6 @@
 ---
 title: Manifesto
-emoji: ' <span class="emoji" role="img" aria-label="Label"></span>'
+rss: false
 draft: true
 ---
 {% extends 'structure/templates/page-3col.njk'%}
