--- a/content/shrine/orla.njk
+++ b/content/shrine/orla.njk
@@ -1,5 +1,6 @@
 ---
 title: Orla
+rss: true
 ---
 {% extends 'structure/templates/page-2col.njk'%}
 {% import "structure/components/components.njk" as macro with context %}
