--- a/content/experiments/css-tarot-card.njk
+++ b/content/experiments/css-tarot-card.njk
@@ -2,6 +2,7 @@
 title: CSS Tarot card
 description: Pure CSS Tarot card 'Three of Swords' depicting a heart pierced by three swords, surrounded by clouds and rain. Using and extending CodePen's challenge palette 'Perfect Purple'. The card flips on hover!
 date: 2023-10-01
+rss: true
 style: '
     .csstarot {
       background: #e2a9e5;
