--- a/content/blog.njk
+++ b/content/blog.njk
@@ -1,9 +1,10 @@
 ---
 title: Blog
+rss: false
 eleventyNavigation:
   key: Blog
   emoji: <span class="emoji" aria-hidden="true">📝</span>
-  order: 3
+  order: 2
 ---
 {% extends "structure/pages/list-blog.njk" %}
 {% set postslist = collections.posts %}
