--- a/content/site.njk
+++ b/content/site.njk
@@ -60,6 +60,7 @@ rss: false
 		<a href="/rss.xml" class="rss">Blog RSS feed</a>
 		<a href="/experiments.xml" class="rss">Experiments RSS feed</a>
 		<a href="/changelog.xml" class="rss">Changelog RSS feed</a>
+		<a href="/all.xml" class="rss">All RSS feed</a>
 	</ul>
 {% endblock %}
 
