🏗 Add groundwork for Collections section

--- a/content/collections.njk
+++ b/content/collections.njk
@@ -5,12 +5,9 @@ eleventyNavigation:
   key: Collections
   emoji: <span class="emoji" aria-hidden="true">🧩</span>
   order: 4
-draft: true
 ---
 {% extends "structure/pages/list-collections.njk" %}
 
 {% block main %}
-<article>
-  <h2>Orla shrine</h2>
-</article>
+<p>To be added</p>
 {% endblock %}
