--- a/content/shrine/orla.njk
+++ b/content/shrine/orla.njk
@@ -1,6 +1,7 @@
 ---
 title: Orla
 rss: true
+date: 2023-11-19
 ---
 {% extends 'structure/templates/page-2col.njk'%}
 {% import "structure/components/components.njk" as macro with context %}
