--- a/structure/global/nav.njk
+++ b/structure/global/nav.njk
@@ -1,7 +1,7 @@
 <nav aria-label="Top level" class="page__nav page__nav--top">
         <ul>
             {%- for entry in collections.all | eleventyNavigation %}
-            <li>{{ entry.emoji|safe }} <a href="{{ entry.url }}" {% if entry.url == page.url %} aria-current="page" {% endif %}>{{ entry.title }}</a></li>
+            <li class="{{ entry.title | slug}}">{{ entry.emoji|safe }} <a href="{{ entry.url }}" {% if entry.url == page.url %} aria-current="page" {% endif %}>{{ entry.title }}</a></li>
             {%- endfor %}
         </ul>
     </nav>
