📃 Add RSS feeds to homepage

--- a/assets/css/base/_list.css
+++ b/assets/css/base/_list.css
@@ -47,6 +47,11 @@ ol.inline {
   padding-left: 0;
 }
 
+ul.small,
+ol.small {
+  font-size: 80%;
+}
+
 a.rss::before {
   content: '';
   width: 16px;
