--- a/content/site.njk
+++ b/content/site.njk
@@ -57,10 +57,10 @@ rss: false
 {%- block right -%}
 	<h2 class="visually-hidden">RSS feeds</h2>
 	<ul class="unstyled">
-		<a href="/rss.xml" class="rss">Blog RSS feed</a>
-		<a href="/experiments.xml" class="rss">Experiments RSS feed</a>
-		<a href="/changelog.xml" class="rss">Changelog RSS feed</a>
-		<a href="/all.xml" class="rss">All RSS feed</a>
+		<li><a href="/rss.xml" class="rss">Blog RSS feed</a></li>
+		<li><a href="/experiments.xml" class="rss">Experiments RSS feed</a></li>
+		<li><a href="/changelog.xml" class="rss">Changelog RSS feed</a></li>
+		<li><a href="/all.xml" class="rss">All RSS feed</a></li>
 	</ul>
 {% endblock %}
 
