--- a/content/collections/sticker-album.njk
+++ b/content/collections/sticker-album.njk
@@ -19,15 +19,28 @@ style: '
 
 .sticker:nth-child(3) {
     grid-column: 4 / span 4;
+    grid-row: 4 / span 1;
 }
 
 .sticker:nth-child(4) {
-    grid-column: 6 / span 2;
-    grid-row: 2 / span 3;
+grid-column: 6 / span 3;
+  grid-row: 2 / span 2;
 }
 .sticker:nth-child(5) {
     grid-column: 7 / span 3;
     grid-row: 1 / span 1;
+}
+.sticker:nth-child(6) {
+    grid-column: 8 / span 4;
+    grid-row: 3 / span 2;
+}
+.sticker:nth-child(8) {
+grid-column: 1 / span 3;
+  grid-row: 3 / span 2;
+}
+.sticker:nth-child(9) {
+grid-column: 10 / span 2;
+  grid-row: 2 / span 1;
 }
 
 .sticker {
@@ -36,16 +49,6 @@ style: '
 
 .sticker img {
     filter: drop-shadow(4px 0 0 white) drop-shadow(0 -4px 0 white) drop-shadow(-4px 0 0 white) drop-shadow(0 4px 0 white) saturate(1.8);
-}
-
-.sticker-credit {
-    padding: 4px;
-    color: var(--text);
-    font-size: 0.5rem;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
 }
 '
 ---
@@ -56,23 +59,43 @@ style: '
 <div class="stickergrid">
     <div class="sticker">
         <img src="/images/stickers/mercy.png" alt="" loading="lazy">
-        <a href="https://www.deviantart.com/hanagluskin/art/F2u-Pink-Mercy-Spray-III-761684949" class="sticker-credit"><span class="visually-hidden">Mercy sticker </span>Credit</a>
     </div>
     <div class="sticker">
-        <img src="/images/stickers/killjoy.webp" alt="" loading="lazy">
-        <a href="https://www.reddit.com/r/VALORANT/comments/i3qes8/fanart_killjoy_and_more" class="sticker-credit"><span class="visually-hidden">Killjoy turret sticker </span>Credit</a>
+        <img src="/images/stickers/killjoy.png" alt="" loading="lazy">
     </div>
     <div class="sticker">
         <img src="/images/stickers/helios.png" alt="" loading="lazy">
-        <a href="https://commons.wikimedia.org/wiki/File:Head_Helios_AM_Rhodes_E49_%28bust_only%29.png" class="sticker-credit"><span class="visually-hidden">Helios bust sticker </span>Credit</a>
     </div>
     <div class="sticker">
-        <img src="/images/stickers/star.png" alt="" loading="lazy">
-        <a href="https://www.vecteezy.com/free-png/star-stickers" class="sticker-credit"><span class="visually-hidden">Star Stickers PNGs by Vecteezy </span>Credit</a>
+        <img src="/images/stickers/dog-laika.png" alt="" loading="lazy">
     </div>
     <div class="sticker">
         <img src="/images/stickers/pusheen.png" alt="" loading="lazy">
-        <a href="https://pusheen.com/" class="sticker-credit"><span class="visually-hidden">Pusheen sticker </span>Credit</a>
     </div>
+    <div class="sticker">
+        <img src="/images/stickers/flowers.png" alt="" loading="lazy">
+    </div>
+    <div class="sticker">
+        <img src="/images/stickers/fairy-gnome.png" alt="" loading="lazy">
+    </div>
+    <div class="sticker">
+        <img src="/images/stickers/dog-butterfly.png" alt="" loading="lazy">
+    </div>
+    <div class="sticker">
+        <img src="/images/stickers/cat-killjoy.png" alt="" loading="lazy">
+    </div>
+</div>
+<div class="pt-2">
+    <ol class="stars">
+        <li><a href="https://www.deviantart.com/hanagluskin/art/F2u-Pink-Mercy-Spray-III-761684949">Pink Mercy</a></li>
+        <li><a href="https://www.reddit.com/r/VALORANT/comments/i3qes8/fanart_killjoy_and_more">Killjoy turret</a></li>
+        <li><a href="https://commons.wikimedia.org/wiki/File:Head_Helios_AM_Rhodes_E49_%28bust_only%29.png">Helios bust</a></li>
+        <li><a href="https://giphy.com/stickers/happy-illustration-loop-cnGJ92Bii3GiDZQqJs">Dog in space by Zodchiy</a></li>
+        <li><a href="https://pusheen.com/">Pusheen sticker</a></li>
+        <li><a href="https://giphy.com/gifs/flowers-daisies-happy-UQEHEQTpQUcX1sQpGb">Flowers by Sophie Potter</a></li>
+        <li><a href="https://giphy.com/stickers/small-gnome-cute-URvIXxUn5ptazkr5ZB">Fairy Gnome by Cheynne Barton</a></li>
+        <li><a href="https://giphy.com/gifs/3-leigh-ellexson-ROk1VeDJ32OzeE52md">Dog with butterflyby Leigh Ellexson</a></li>
+        <li><a href="https://giphy.com/stickers/cat-feminist-killjoy-5QI5AMCoQNzaG51UIV">Cat feminist by Ambivalently Yours</a></li>
+    </ol>
 </div>
 {%- endblock -%}
