--- a/assets/css/components/_button.css
+++ b/assets/css/components/_button.css
@@ -1,7 +1,7 @@
-
 button,
 .button,
 input[type="submit"] {
+  font-family: var(--font-family);
   will-change: transform;
   padding: 6px 12px;
   border-radius: 4px;
@@ -67,6 +67,28 @@ button.ghost:active,
 button.ghost[aria-pressed="true"] {
   transform: translate(4px, 4px);
   box-shadow: inset 0 0 0 2px var(--link), 0 0 0 0 var(--linkaccent);
+}
+
+
+button.hidden {
+  transform: none;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  box-shadow: none;
+  color: var(--text);
+  font-size: inherit;
+}
+button.hidden:hover,
+button.hidden:focus,
+button.hidden:active {
+  transform: none;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  box-shadow: none;
+  color: var(--linkhover);
+  text-decoration: underline wavy 2px;
 }
 
 .copyButton {
