✨ Update avatar randomiser

--- a/content/index.njk
+++ b/content/index.njk
@@ -28,7 +28,7 @@ scripts: '
 			<button id="refreshAvatar" class="button hidden">
 				🔃 Refresh avatar
 			</button>
-			<span>🖼️ <a href="/gpoy" class="hidden">More pictures</a></span>
+			<span>🖼️ <a href="/collections/avatars" class="hidden">More pictures</a></span>
 		</div>
 	</div>
 	<ul class="unstyled">
