--- a/content/about.njk
+++ b/content/about.njk
@@ -12,7 +12,9 @@ eleventyNavigation:
 {%- block left -%}
 <div class="bio">
 	<h2 class="visually-hidden">Bio</h2>
-	<img class="bio-pic" src="/images/gpoy.jpg" alt="">
+	<div class="avatar __noradius">
+		<img src="/images/gpoy.jpg" alt="">
+	</div>
 	<ul class="unstyled">
 		<li><span class="emoji" role="img" aria-label="Pronouns">🌷</span> she/her</li>
 		<li><span class="emoji" role="img" aria-label="Age">🎂</span> Millenial</li>
