--- a/content/collections/avatars.njk
+++ b/content/collections/avatars.njk
@@ -11,70 +11,70 @@ style: ''
     <div class="dashboard__item">
         <figure>
             <a href="">
-                <img src="/images/avatars/flowerveil.png" alt="" loading="lazy">
+                <img src="/images/collections/avatars/flowerveil.png" alt="" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure>
             <a href="https://picrew.me/en/image_maker/1243146">
-                <img src="/images/avatars/crows_character_creator_.png" alt="" loading="lazy">
+                <img src="/images/collections/avatars/crows_character_creator_.png" alt="" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure>
             <a href="https://picrew.me/en/image_maker/644129">
-                <img src="/images/avatars/makowka_character_maker_II.png" alt="" loading="lazy">
+                <img src="/images/collections/avatars/makowka_character_maker_II.png" alt="" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure>
             <a href="https://picrew.me/en/image_maker/2141620">
-                <img src="/images/avatars/OC_Creator-transparent.png" alt="" loading="lazy">
+                <img src="/images/collections/avatars/OC_Creator-transparent.png" alt="" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure>
             <a href="https://picrew.me/en/image_maker/1473879">
-                <img src="/images/avatars/PotatoLords_Persona_Creator.png" alt="" loading="lazy">
+                <img src="/images/collections/avatars/PotatoLords_Persona_Creator.png" alt="" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure>
             <a href="https://jazzybee.itch.io/sdvcharactercreator">
-                <img src="/images/avatars/stardew.png" alt="" loading="lazy">
+                <img src="/images/collections/avatars/stardew.png" alt="" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure>
             <a href="https://picrew.me/en/image_maker/1944831">
-                <img src="/images/avatars/TOON_ME.png" alt="" loading="lazy">
+                <img src="/images/collections/avatars/TOON_ME.png" alt="" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure>
             <a href="https://picrew.me/en/image_maker/1342558">
-                <img src="/images/avatars/Ultimate_friends_face_maker.png" alt="" loading="lazy">
+                <img src="/images/collections/avatars/Ultimate_friends_face_maker.png" alt="" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure>
             <a href="https://picrew.me/en/image_maker/49528">
-                <img src="/images/avatars/nosk.png" alt="" loading="lazy">
+                <img src="/images/collections/avatars/nosk.png" alt="" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure>
             <a href="http://mia-wilkes.squarespace.com/">
-                <img src="/images/avatars/miaw.jpg" alt="" loading="lazy">
+                <img src="/images/collections/avatars/miaw.jpg" alt="" loading="lazy">
             </a>
         </figure>
     </div>
