--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -15,6 +15,7 @@
 
 .dashboard__item.--box {
   box-shadow: inset 0 0 0 4px var(--dashboard-bg), 4px 4px 0 0 var(--dashboard-outline);
+  padding: 4px;
 }
 
 .dashboard__item.--box header {
