--- a/content/collections.njk
+++ b/content/collections.njk
@@ -6,29 +6,53 @@ eleventyNavigation:
   emoji: <span class="emoji" aria-hidden="true">🧩</span>
   order: 4
 style: '
-.collection {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-}
-.collection__item {
-border: 1px solid var(--text);
-border-radius: 16px;
-overflow: hidden;
+.dashboard__item {
+  position: relative;
 }
 
-.collection__item-image img{
-display: block;
+.dashboard__item header a {
+  position: static;
+}
+
+.dashboard__item header a:hover,
+.dashboard__item header a:focus,
+.dashboard__item header a:active {
+  color: var(--text)
+}
+
+.dashboard__item header a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 '
 ---
 {% extends "structure/pages/list-collections.njk" %}
 
 {% block main %}
-<section class="collection">
-<article class="collection__item">
-  <div class="collection__item-image">
-    <img src="https://placehold.co/600x400/000000/ffffff.png" alt="Great alt text" loading="lazy" data-object-fit="cover">
-  </div>
-</article>
+<section class="dashboard">
+  <article class="dashboard__item --box"">
+    <figure class="dashboard__item-image">
+      <img src="/images/collections/stickers/cover.png" alt="Great alt text" loading="lazy" role="presentation">
+    </figure>
+    <header>
+        <h2 class="--bgwiggly">
+          <a href="/collections/sticker-album" class="hidden">Sticker album</a>
+        </h2>
+      </header>
+  </article>
+  <article class="dashboard__item --box"">
+    <figure class="dashboard__item-image">
+      <img src="/images/collections/avatars/cover.png" alt="Great alt text" loading="lazy" role="presentation">
+    </figure>
+    <header>
+        <h2 class="--bgwiggly">
+          <a href="/collections/avatars" class="hidden">Avatars</a>
+        </h2>
+      </header>
+  </article>
 </section>
 {% endblock %}
