--- a/assets/css/pages/_homepage.css
+++ b/assets/css/pages/_homepage.css
@@ -8,6 +8,7 @@
   right: 36px;
   padding-right: 4px;
 }
+
 @media (min-width: 992px) {
   .settings {
     position: relative;
@@ -37,18 +38,56 @@
   }
 }
 
-.bio-pic {
+.avatar {
   max-width: 150px;
-  margin-bottom: 1rem;
-  --mask:
-    radial-gradient(7.00px at 50% calc(100% - 9.60px), #000 99%, #0000 101%) calc(50% - 12px) 0/24px 100%,
-    radial-gradient(7.00px at 50% calc(100% + 3.60px), #0000 99%, #000 101%) 50% calc(100% - 6px)/24px 100% repeat-x;
-  -webkit-mask: var(--mask);
-  mask: var(--mask);
 }
 
 @media (min-width: 480px) {
-  .bio-pic {
+  .avatar {
     max-width: 200px;
   }
+}
+
+.avatar.__noradius img {
+  border-radius: 0;
+}
+
+.avatar__extra {
+  background-color: var(--bodybg);
+  padding: 30px 10px 15px 10px;
+  border-radius: 0 0 20px 20px;
+  --mask:
+    radial-gradient(15.37px at 50% 21.60px, #000 99%, #0000 101%) 50% 0/48px 100%,
+    radial-gradient(15.37px at 50% -9.6px, #0000 99%, #000 101%) calc(50% - 24px) 12px/48px 100% repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+  font-size: 50%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  white-space: nowrap;
+}
+
+.avatar img {
+  --mask:
+    radial-gradient(15.37px at 50% calc(100% - 21.60px), #000 99%, #0000 101%) calc(50% - 24px) 0/48px 100%,
+    radial-gradient(15.37px at 50% calc(100% + 9.60px), #0000 99%, #000 101%) 50% calc(100% - 12px)/48px 100% repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+  width: 100%;
+  aspect-ratio: 1;
+  border-radius: 100px 100px 0 0;
+  overflow: hidden;
+}
+
+.avatar__script img {
+  background-color: var(--bodybg);
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.swapped img {
+  background-color: transparent;
+  animation: fadeIn forwards 1s;
 }
