🐛 Fix sticker image URL

--- a/content/collections/sticker-album.njk
+++ b/content/collections/sticker-album.njk
@@ -63,31 +63,31 @@ style: '
 {%- block main -%}
 <div class="stickergrid">
     <div class="sticker">
-        <img src="/images/stickers/mercy.png" alt="Mercy from Overwatch 1 in the pink skin that raised money for Breast Cancer Research" loading="lazy">
+        <img src="/images/collections/stickers/mercy.png" alt="Mercy from Overwatch 1 in the pink skin that raised money for Breast Cancer Research" loading="lazy">
     </div>
     <div class="sticker">
-        <img src="/images/stickers/killjoy.png" alt="A little purple sentry gun which belongs to Killjoy, an engineer from Valorant. A blue question and exclamation mark sit above it as it's seen someone and is about to shoot them" loading="lazy">
+        <img src="/images/collections/stickers/killjoy.png" alt="A little purple sentry gun which belongs to Killjoy, an engineer from Valorant. A blue question and exclamation mark sit above it as it's seen someone and is about to shoot them" loading="lazy">
     </div>
     <div class="sticker">
-        <img src="/images/stickers/helios.png" alt="Stone bust of Helios" loading="lazy">
+        <img src="/images/collections/stickers/helios.png" alt="Stone bust of Helios" loading="lazy">
     </div>
     <div class="sticker">
-        <img src="/images/stickers/dog-laika.png" alt="A floating black dog in space wearing an orange spacesuit with stars around it. It depicts Laika the first animal in space" loading="lazy">
+        <img src="/images/collections/stickers/dog-laika.png" alt="A floating black dog in space wearing an orange spacesuit with stars around it. It depicts Laika the first animal in space" loading="lazy">
     </div>
     <div class="sticker">
-        <img src="/images/stickers/pusheen.png" alt="It's pusheen! A very plump grey/brown cat. He's dressed up as a unicorn so has a horn and a rainbow mane and tail" loading="lazy">
+        <img src="/images/collections/stickers/pusheen.png" alt="It's pusheen! A very plump grey/brown cat. He's dressed up as a unicorn so has a horn and a rainbow mane and tail" loading="lazy">
     </div>
     <div class="sticker">
-        <img src="/images/stickers/flowers.png" alt="3 flowers, one is big and orange, one is pale pink and the other is has a stem and green leaves and a small white bud" loading="lazy">
+        <img src="/images/collections/stickers/flowers.png" alt="3 flowers, one is big and orange, one is pale pink and the other is has a stem and green leaves and a small white bud" loading="lazy">
     </div>
     <div class="sticker">
-        <img src="/images/stickers/fairy-gnome.png" alt="A behatted gnome sits. Peach hat, orange hair, green coat, and yellow pants" loading="lazy">
+        <img src="/images/collections/stickers/fairy-gnome.png" alt="A behatted gnome sits. Peach hat, orange hair, green coat, and yellow pants" loading="lazy">
     </div>
     <div class="sticker">
-        <img src="/images/stickers/dog-butterfly.png" alt="A cream coloured dog sits next to a blue butterfly" loading="lazy">
+        <img src="/images/collections/stickers/dog-butterfly.png" alt="A cream coloured dog sits next to a blue butterfly" loading="lazy">
     </div>
     <div class="sticker">
-        <img src="/images/stickers/cat-killjoy.png" alt="Plump pinkish white cat sits, eyes look suspiciously at you. It has hearts on it's cheeks and a big red bow collar with a heart tag that says kill joy. It's a feminist." loading="lazy">
+        <img src="/images/collections/stickers/cat-killjoy.png" alt="Plump pinkish white cat sits, eyes look suspiciously at you. It has hearts on it's cheeks and a big red bow collar with a heart tag that says kill joy. It's a feminist." loading="lazy">
     </div>
 </div>
 <div class="pt-2">
