--- a/content/collections/avatars.njk
+++ b/content/collections/avatars.njk
@@ -32,6 +32,13 @@ style: ''
     </div>
     <div class="dashboard__item">
         <figure>
+            <a href="https://picrew.me/en/image_maker/684527https://picrew.me/en/image_maker/684527">
+                <img src="/images/collections/avatars/AmandaBaeza.png" alt="Avatar by Amanda Baeza" loading="lazy">
+            </a>
+        </figure>
+    </div>
+    <div class="dashboard__item">
+        <figure>
             <a href="https://picrew.me/en/image_maker/2141620">
                 <img src="/images/collections/avatars/OC_Creator-transparent.png" alt="Avatar by MaeEllen" loading="lazy">
             </a>
