🐛 Fix experiments CSS

--- a/content/experiments/css-skull.njk
+++ b/content/experiments/css-skull.njk
@@ -48,7 +48,7 @@ style: '
     }
 
     .eye-socket:before {
-        content: '';
+        content: "";
         position: absolute;
         width: 100%;
         height: 100%;
@@ -89,7 +89,7 @@ style: '
     }
 
     .maxilla .nasal-cavity::before {
-        content: '';
+        content: "";
         position: absolute;
         width: 20px;
         height: 20px;
