--- a/content/experiments/css-tarot-card.njk
+++ b/content/experiments/css-tarot-card.njk
@@ -81,7 +81,7 @@ style: '
 
     .roman-numerals span::before,
     .roman-numerals span::after {
-      content: '';
+      content: "";
       width: calc(100% + 10px);
       height: 2px;
       position: absolute;
@@ -177,7 +177,7 @@ style: '
     }
 
     .bottom-of-my-heart .wound::before {
-      content: '';
+      content: "";
       width: 33px;
       height: 18px;
       background: #ff5495;
@@ -190,7 +190,7 @@ style: '
     }
 
     .bottom-of-my-heart .wound::after {
-      content: '';
+      content: "";
       width: 33px;
       height: 24px;
       background: #ff5495;
@@ -234,7 +234,7 @@ style: '
       background: #ffd85b;
       border: 2px solid #ffcc28;
       border-radius: 20px;
-      content: '';
+      content: "";
       height: 10px;
       left: 50%;
       position: absolute;
@@ -261,7 +261,7 @@ style: '
       background: #ffd85b;
       border: 2px solid #ffcc28;
       border-radius: 100%;
-      content: '';
+      content: "";
       height: 26px;
       left: -7px;
       position: absolute;
@@ -276,7 +276,7 @@ style: '
       background: #ffd85b;
       border: 2px solid #ffcc28;
       border-radius: 100%;
-      content: '';
+      content: "";
       height: 26px;
       position: absolute;
       right: -7px;
@@ -302,7 +302,7 @@ style: '
     .swords .two .blade::after,
     .swords .three .blade::after {
       background: #c7d1e0;
-      content: '';
+      content: "";
       height: 190px;
       left: 50%;
       position: absolute;
@@ -345,7 +345,7 @@ style: '
     .blood::before {
       background: #ff2175;
       border-radius: 100%;
-      content: '';
+      content: "";
       height: 5px;
       left: 50%;
       position: absolute;
@@ -357,7 +357,7 @@ style: '
     .blood::after {
       border: 10px solid transparent;
       border-bottom: 20px solid #ff2175;
-      content: '';
+      content: "";
       position: absolute;
       top: -22px;
     }
@@ -393,7 +393,7 @@ style: '
     .insignia .swords::after {
       background: #ffcc28;
       bottom: 25%;
-      content: '';
+      content: "";
       height: 5px;
       left: 50%;
       position: absolute;
