--- a/content/collections/avatars.njk
+++ b/content/collections/avatars.njk
@@ -86,5 +86,26 @@ style: ''
             </a>
         </figure>
     </div>
+    <div class="dashboard__item">
+        <figure>
+            <a href="https://picrew.me/en/image_maker/263035/">
+                <img src="/images/collections/avatars/makowka_oc_maker.png" alt="Avatar by Makowwka" loading="lazy">
+            </a>
+        </figure>
+    </div>
+    <div class="dashboard__item">
+        <figure>
+            <a href="https://picrew.me/en/image_maker/136066/">
+                <img src="/images/collections/avatars/Cutie_Creator_20.png" alt="Avatar by Citrus Lucy" loading="lazy">
+            </a>
+        </figure>
+    </div>
+    <div class="dashboard__item">
+        <figure>
+            <a href="https://picrew.me/en/image_maker/1322863/">
+                <img src="/images/collections/avatars/_friend_maker__by_Rowyn.png" alt="Avatar by Rowyn" loading="lazy">
+            </a>
+        </figure>
+    </div>
 </div>
 {%- endblock -%}
