--- a/content/experiments/css-ghost.njk
+++ b/content/experiments/css-ghost.njk
@@ -1,6 +1,6 @@
 ---
 title: CSS Ghost
-description: "Pure CSS ghost created for the <a href='https://32bit.mysteryslug.com/events/halloween-2023/''>32bit.cafe Halloween 2023 challenge</a>."
+description: "Pure CSS ghost created for the <a href='https://32bit.mysteryslug.com/events/halloween-2023/'>32bit.cafe Halloween 2023 challenge</a>."
 date: 2023-10-25
 rss: true
 style: '
@@ -165,6 +165,7 @@ style: '
             transform: rotate(-15deg);
         }
     }'
+scripts: '<script defer>sparkles(["👻"])</script>'
 ---
 
 {% block main %}
@@ -173,6 +174,7 @@ style: '
     <ul>
         <li><a href="https://ribo.zone/graveyard">Link graveyard by Ribo.zone</a></li>
         <li><a href="https://divergentrays.com/trickortreat">Trick or Treat by Divergent Rays</a></li>
+    </ul>
 </div>
 
 <div class="cssghost">
