--- a/structure/core/_template-end.njk
+++ b/structure/core/_template-end.njk
@@ -1,7 +1,8 @@
+<script src="/js/sparkles.js"></script>
 <script src="/js/main.js"></script>
 <script data-goatcounter="https://frills.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-{%- if scripts -%}
+{% if scripts -%}
 {{scripts|safe}}
-{%- endif -%}
+{%- endif %}
 </body>
 </html>
