--- a/content/links.njk
+++ b/content/links.njk
@@ -5,6 +5,13 @@ eleventyNavigation:
   key: Links
   emoji: <span class="emoji" aria-hidden="true">🔗</span>
   order: 3
+scripts: '<script>
+  const t = document.getElementById("toggleHighContrast")
+  const w = document.querySelectorAll(".buttonwall")
+  const o = "Enable high contrast"
+  const c = "Disable high contrast"
+  if (t) {t.addEventListener("click", (function () {w.forEach((s => {s.classList.contains("--highcontrast") ? (t.innerHTML = o, t.setAttribute("aria-pressed", !1), s.classList.remove("--highcontrast")) : (t.innerHTML = c, t.setAttribute("aria-pressed", !0), s.classList.add("--highcontrast"))}))}));}
+</script>'
 ---
 {% extends 'structure/templates/page-3col.njk'%}
 
@@ -305,13 +312,3 @@ eleventyNavigation:
 {%- block right -%}
 {% include "structure/components/button.njk" %}
 {%- endblock -%}
-
-{% block scripts %}
-<script>
-  const t = document.getElementById('toggleHighContrast')
-  const w = document.querySelectorAll('.buttonwall')
-  const o = "Enable high contrast"
-  const c = "Disable high contrast"
-  if (t) {t.addEventListener("click", (function () {w.forEach((s => {s.classList.contains("--highcontrast") ? (t.innerHTML = o, t.setAttribute("aria-pressed", !1), s.classList.remove("--highcontrast")) : (t.innerHTML = c, t.setAttribute("aria-pressed", !0), s.classList.add("--highcontrast"))}))}));}
-</script>
-{% endblock %}
