🐛 Fix scripts placement

--- a/content/experiments/change-background-colour-with-range-input.njk
+++ b/content/experiments/change-background-colour-with-range-input.njk
@@ -43,14 +43,14 @@ style: '
 scripts: '
 <script>
   document.addEventListener("DOMContentLoaded", () => {
-    document.body.innerHTML += `<style id="hslVariable"></style>`
-    const range = document.getElementById("hslRange")
-    const style = document.getElementById("hslVariable")
-    let hue = range.value
-    style.innerHTML = `:root{--hue: ${hue};`
+    document.body.innerHTML += `<style id="hslVariable"></style>`;
+    const range = document.getElementById("hslRange");
+    const style = document.getElementById("hslVariable");
+    let hue = range.value;
+    style.innerHTML = `:root{--hue: ${hue};`;
     range.addEventListener("input", (event) => {
-      hue = range.value
-      style.innerHTML = `:root{--hue: ${hue};`
+      hue = range.value;
+      style.innerHTML = `:root{--hue: ${hue};`;
     })
   });
 </script>'
