--- a/content/experiments/html-named-colors.njk
+++ b/content/experiments/html-named-colors.njk
@@ -153,27 +153,27 @@ scripts: '
   const colours = document.querySelectorAll(".namedcolours__item");
   document.getElementById("namedColourReset").addEventListener("click",function (e) {
     colours.forEach(function (colour) {colour.style.display = "block";})
-  })
-  const buttons = document.querySelectorAll(".namedColourButton")
+  });
+  const buttons = document.querySelectorAll(".namedColourButton");
   buttons.forEach(function (button) {
     button.addEventListener("click",function (e) {
-      let selectedColour = button.dataset.colour
-      let selectedColourItems = document.querySelectorAll(`.namedcolours__item.${selectedColour}`)
+      let selectedColour = button.dataset.colour;
+      let selectedColourItems = document.querySelectorAll(`.namedcolours__item.${selectedColour}`);
       const noItems = document.getElementById(`namedColourNone`);
-      colours.forEach(function (colour) {colour.style.display = "none"})
+      colours.forEach(function (colour) {colour.style.display = "none"});
       if (selectedColourItems.length > 0) {
-        noItems.style.removeProperty("display")
-        selectedColourItems.forEach(function (colour) {colour.style.display = "block"})
+        noItems.style.removeProperty("display");
+        selectedColourItems.forEach(function (colour) {colour.style.display = "block"});
       } else { noItems.style.display = "block" }
     })
   })
 
   document.querySelectorAll(".copyButton").forEach(function (cb) {
     cb.addEventListener("click",function (e) {
-      let el = e.target
-      let ct = el.dataset.copy
-      navigator.clipboard.writeText(ct)
-      el.innerHTML = "Copied"
+      let el = e.target;
+      let ct = el.dataset.copy;
+      navigator.clipboard.writeText(ct);
+      el.innerHTML = "Copied";
     })
   })
 
